[package]
name = "strconv"
version = "0.1.0"
authors = ["sammyne <xiangminli@alumni.sjtu.edu.cn>"]
edition = "2021"
exclude = ["doc-preview.sh"]
rust-version = "1.68.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.40"
